[package]
name = "relaying-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "*"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "macros" ] }
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "*"
env_logger = "0.10"
validator = "0.14"
serde_json = "1.0"
rand = "0.8"
rusoto_ec2 = "0.48"
rusoto_signature = "0.48"
rusoto_credential = "0.48"
rusoto_core = "0.48"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.1.0"
base64 = "*"
log = "*"
nostr = "*"
url = "*"
secp256k1 = "*"
anyhow = "1.0.72"
sha2 = "0.10"
hmac = "0.12.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }